# veertrade

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_SPEC.md  ARCHITECTURE.md  BUILD_PLAN.md  DATABASE_SCHEMA.md  DESIGN.md  GIT_WORKFLOW.md  LANDING_PAGE_REVIEW.md  LANDING_PAGE_SPEC.md  LANDING_PAGE_WIREFRAME.md  MASTER_PROMPT.md  PRODUCT.md  REVIEW_REPORT.md  REVIEW_TRIAGE.md  docker-compose.dev.yml  docker-compose.yml  eslint.config.mjs  newSession.txt  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml
apps/dashboard/: package.json  vitest.config.ts
apps/marketing/: astro.config.mjs  package.json  tsconfig.json
infrastructure/docker/: Dockerfile.api  Dockerfile.api.dev  Dockerfile.broker  Dockerfile.broker.dev  Dockerfile.notification  Dockerfile.notification.dev  Dockerfile.strategy  Dockerfile.strategy.dev
infrastructure/nginx/: default.conf
infrastructure/scripts/: bootstrap.sh
logo/: site.webmanifest
services/api/: pyproject.toml
services/broker/: pyproject.toml
services/notification/: pyproject.toml
services/strategy/: alembic.ini  pyproject.toml
services/strategy/alembic/: env.py
services/strategy/alembic/versions/: 001_create_strategies.py  002_create_strategy_versions.py
services/strategy/app/: main.py
services/strategy/app/core/: database.py  settings.py
services/strategy/app/models/: strategy.py
services/strategy/app/routes/: strategies.py
services/strategy/app/schemas/: strategy.py
services/strategy/app/services/: templates.py  validation.py
(+38 files in other folders)
